@@ -1,6 +1,10 @@
 
 Drupal 7.25, xxxx-xx-xx (development version)
 -----------------------
+- Added an optional feature to the Statistics module to allow node views to be
+  tracked by Ajax requests rather than during the server-side generation of the
+  page. This allows the node counter to work on sites that use external page
+  caches (string change and new administrative option).
 - Added a link to the drupal.org documentation page for cron to the Cron
   settings page (string change).
 - Added a 'drupal_anonymous_user_object' variable to allow the anonymous user
